MB-25938: Create a copy of the xattrs before modifying them

When xattrs needs to be modified during a subdoc cmd, the xattrs blob
must be owned.

In this commit, we create a temporary copy of the xattrs, write to it
and then replace the xattrs of the doc with the temporary modified
copy.

Change-Id: I0890b6a73235d3173878442aaf7c53967ae69f0e
Reviewed-on: http://review.couchbase.org/83339
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Manu Dhundi <manu@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>